--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.xingshijie.androidupdate"
         minSdkVersion 15
         targetSdkVersion 24
-        versionCode 1
+        versionCode 250
         versionName "1.0"
     }
     buildTypes {
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.0.0-alpha2'
+    compile project(path: ':Update')
 }
