--- a/update/src/main/AndroidManifest.xml
+++ b/update/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.xingshijie.android.update">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application android:allowBackup="true" android:label="@string/app_name"
         android:supportsRtl="true">
